--- a/src/Components/cards.css
+++ b/src/Components/cards.css
@@ -9,6 +9,13 @@
 
 /* card itself
 ********************************************************************/
+.playingCards{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 30px;
+}
 
 .playingCards .card {
   display: inline-block;
