--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
 }
 
 button{
-  margin-top: 12rem;
+  margin-top: 20px;
   padding: 10px;
   border-radius: 10px;
   background-color: #f3e9e9;
